--- a/Identity Service/Identity Service/appsettings.json
+++ b/Identity Service/Identity Service/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=identity;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Issuer": "WeekCart.Identity",
+    "Audience": "WeekCart.Gateway",
+    "Key": "UltraSecretKey_min32chars",
+    "AccessMinutes": 15,
+    "RefreshDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
