--- a/Identity Service/Domain/Domain.csproj
+++ b/Identity Service/Domain/Domain.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.16" />
+  </ItemGroup>
+
 </Project>
