--- a/Identity Service/Identity Service/appsettings.json
+++ b/Identity Service/Identity Service/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=identity;Username=postgres;Password=postgres"
+    "Default": "Host=localhost;Port=5432;Database=WeekCart;Username=postgres;Password=777buba777"
   },
   "Jwt": {
     "Issuer": "WeekCart.Identity",
     "Audience": "WeekCart.Gateway",
-    "Key": "UltraSecretKey_min32chars",
+    "Key": "UltraSecretKey_min32chars_please_change", 
     "AccessMinutes": 15,
     "RefreshDays": 7
   },
