CRUD для Product Service

--- a/Product Service/Product Service/appsettings.json
+++ b/Product Service/Product Service/appsettings.json
@@ -1,9 +1,20 @@
 {
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=WeekCart_products;Username=postgres;Password=777buba777"
+  },
+
+  "Jwt": {
+    "Issuer": "WeekCart.Identity",
+    "Audience": "WeekCart.Gateway",
+    "Key": "change-me-to-a-long-32+chars-secret-key-please"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
