--- a/Product Service/Product Service/appsettings.json
+++ b/Product Service/Product Service/appsettings.json
@@ -6,7 +6,9 @@
   "Jwt": {
     "Issuer": "WeekCart.Identity",
     "Audience": "WeekCart.Gateway",
-    "Key": "change-me-to-a-long-32+chars-secret-key-please"
+    "Key": "UltraSecretKey_min32chars_please_change",
+    "AccessMinutes": 15,
+    "RefreshDays": 7
   },
 
   "Logging": {
